--- a/gb/24/4/27/n14235516.md
+++ b/gb/24/4/27/n14235516.md
@@ -1,56 +1,57 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>国家重要民俗 北港朝天宫迎妈祖 今明热闹登场</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/04/id14235517-678543-600x400.jpg" />
 <h6>北港朝天宫迎妈祖活动今明登场，今(27)一早县长张丽善、朝天宫董事长蔡咏锝、立委张嘉郡、丁学忠、文观处长陈璧君、警察局长李建民、民政处副处长陈良骏及北港镇长萧美文等人上香祈福，随后点燃起马炮，宣告两天的迎妈祖活动正式登场。（云林县政府提供）
 </h6>
 <hr>
 <p>【大纪元2024年04月27日讯】（大纪元记者廖素贞台湾云林报导）国家重要民俗~北港朝天宫迎妈祖活动今明登场，27日一早县长张丽善、朝天宫董事长蔡咏锝、立委张嘉郡、丁学忠、文观处长陈璧君、警察局长李建民、民政处副处长陈良骏及北港镇长萧美文等人上香祈福，随后点燃起马炮，宣告两天的迎妈祖活动正式登场，庙门广场挤满人潮，炮声不断，恭迎妈祖上轿出巡。</p>
-<figure id="attachment_14235518" aria-describedby="caption-attachment-14235518" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/04/id14235518-678544-600x401.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-large wp-image-14235518" src="https://i.epochtimes.com/assets/uploads/2024/04/id14235518-678544-600x401.jpg" alt="" width="600" b="401" /></a><figcaption id="caption-attachment-14235518" class="wp-caption-text">张县长等人 恭迎妈祖上轿出巡（云林县政府提供）</figcaption></figure>
+<figure id="attachment_14235518" aria-describedby="caption-attachment-14235518" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/04/id14235518-678544-600x401.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="size-large wp-image-14235518" src="https://i.epochtimes.com/assets/uploads/2024/04/id14235518-678544-600x401.jpg" alt="" width="600" b="401" /></a><figcaption id="caption-attachment-14235518" class="wp-caption-text">张县长等人恭迎妈祖上轿出巡（云林县政府提供）</figcaption></figure>
 <p>县长张丽善表示，北港朝天宫不仅宫庙建筑本身是国家古迹，本身更是全台唯一拥有2项国家重要民俗的保存者，包括“北港朝天宫迎妈祖”，以及在今年2月才刚登录的“北港进香”，可见我们北港宗教民俗文化备受肯定。</p>
 <p>“北港朝天宫迎妈祖”是北港的民俗盛事，今年参与绕境的有19组轿前阵头及轿班、34组民间艺阵、真人艺阁53组，参与数量创新高，今年北港朝天宫更与数位发展部合作推出首座“5G数位艺阁”，让民众能异地即时参与感受绕境现场，藉由数位科技来活络北港朝天宫的重要无形文化资产。欢迎全国民众一起来到北港朝天宫，祈求妈祖赐福、观赏艺阁精彩游行、参与炸轿炸虎爷传统习俗，体验专属云林的农历三月小过年，带回满满一整年平安顺遂！</p>
 <p>朝天宫董事长蔡咏锝表示，今天是黄历3月19日北港朝天宫迎妈祖的大日子，又适逢周六信众比往年多很多，而今年也是建庙330周年，活动扩大举办，除了迎妈祖，还有5天真人艺阁游行等，欢迎全国乡亲来北港共襄盛举。</p>
-<figure id="attachment_14235521" aria-describedby="caption-attachment-14235521" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/04/id14235521-678547-600x401.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-large wp-image-14235521" src="https://i.epochtimes.com/assets/uploads/2024/04/id14235521-678547-600x401.jpg" alt="" width="600" b="401" /></a><figcaption id="caption-attachment-14235521" class="wp-caption-text">“炸轿、炸虎爷”是妈祖绕境过程中，两侧店家为祈求平安或感谢妈祖庇佑，会准备大量鞭炮在轿底施放，祈求“愈炸愈发”。（云林县政府提供）</figcaption></figure>
+<figure id="attachment_14235521" aria-describedby="caption-attachment-14235521" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/04/id14235521-678547-600x401.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="size-large wp-image-14235521" src="https://i.epochtimes.com/assets/uploads/2024/04/id14235521-678547-600x401.jpg" alt="" width="600" b="401" /></a><figcaption id="caption-attachment-14235521" class="wp-caption-text">“炸轿、炸虎爷”是妈祖绕境过程中，两侧店家为祈求平安或感谢妈祖庇佑，会准备大量鞭炮在轿底施放，祈求“愈炸愈发”。（云林县政府提供）</figcaption></figure>
 <p>文化观光处处长陈璧君表示，“北港朝天宫迎妈祖”民俗自清康熙年间盛行迄今，于每年农历3月19日、3月20日举行圣母绕境活动，历史悠久，传承“炸轿”、“炸虎爷”、“犁炮”、“艺阁”及阵头等民俗，展现民众对妈祖信仰的高度认同，于民国97年公告登录为云林县民俗，接续在99年登录为国家重要民俗，深获肯定。</p>
-<figure id="attachment_14235520" aria-describedby="caption-attachment-14235520" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/04/id14235520-678546-600x450.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-large wp-image-14235520" src="https://i.epochtimes.com/assets/uploads/2024/04/id14235520-678546-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14235520" class="wp-caption-text">今年县府与云林县文化古迹人文发展协会合作，修复打造金色龙凤阁参与艺阁绕境活动，龙凤阁长一百尺，上可承载16位孩童，华丽而壮观。（云林县政府提供）</figcaption></figure>
+<figure id="attachment_14235520" aria-describedby="caption-attachment-14235520" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/04/id14235520-678546-600x450.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="size-large wp-image-14235520" src="https://i.epochtimes.com/assets/uploads/2024/04/id14235520-678546-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14235520" class="wp-caption-text">今年县府与云林县文化古迹人文发展协会合作，修复打造金色龙凤阁参与艺阁绕境活动，龙凤阁长一百尺，上可承载16位孩童，华丽而壮观。（云林县政府提供）</figcaption></figure>
 <p>陈处长指出，“艺阁”是妈祖绕境活动中最负盛名的部分，绕境时艺阁花车上载着装扮成历史神话故事人物的孩童，搭配车上摆饰，沿路分撒糖果，象征神明发送平安。今年县府更与云林县文化古迹人文发展协会合作，修复打造金色龙凤阁参与艺阁绕境活动，龙凤阁长一百尺，上可承载16位孩童，华丽而壮观，欢迎全国大众一起来北港赏艺阁。</p>
 <p>责任编辑：郑桦</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/4/6/n13700019.md#1">妈祖文化节登场 新港消防分队抢救演练逼真</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/19/n13828089.md#1">南瑶宫十个妈会干部  齐声援林世贤并联袂参拜妈祖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/11/n13863614.md#1">妈祖显神迹-珠宝设计师无师自通 完成108幅妈祖神像</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/20/n14019449.md#1">妈祖造型热气球鹿野高台亮相 笑容祥瑞讨喜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/27/n14234892.md#1">结合数位科技 北港朝天宫推5G数位艺阁迎妈祖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14234851.md#1">屏县全面防汛整备 周春米视察东港抽水站</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14234784.md#1">褒忠乡成立植物医生预约平台  即时解决农民问题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14234763.md#1">海尼根在台投产135亿 赖清德期勉与在地连结</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14234688.md#1">东吴高职表艺科 毕业公演 以华丽歌舞剧呈现</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14234554.md#1">开拓琉球冲绳交流 林校长扩展台琉合作连结</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/6/n13700019.md#1">妈祖文化节登场 新港消防分队抢救演练逼真</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/19/n13828089.md#1">南瑶宫十个妈会干部  齐声援林世贤并联袂参拜妈祖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/11/n13863614.md#1">妈祖显神迹-珠宝设计师无师自通 完成108幅妈祖神像</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/20/n14019449.md#1">妈祖造型热气球鹿野高台亮相 笑容祥瑞讨喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347938.md#1">嘉义市精忠新城经国新城  国庆升旗典礼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347776.md#1">张丽善巡视国庆焰火会场 要求活动尽善尽美</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347382.md#1">永达保险捐长照专车 改善嘉县偏乡长照服务</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347246.md#1">2024西螺大桥艺阵文化祭 600秒焰火 吸引30万人朝圣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347256.md#1">“说走就走的旅行”主题书展  一场全新的心灵探索之旅</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347206.md#1">牡丹社事件150周年系列活动“vuvu传统竞技”先登场</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/3/12/n11108237.md#1" target="_blank">张林：疯狂中共两次差点让中国人被灭绝</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/10/12/n11583426.md#1" target="_blank">悉尼女律师：修炼让我找到了人生意义</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/26/n10743859.md#1" target="_blank">古玉文：公私合营献产业 武百祥命陨红朝</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/12/n11252250.md#1" target="_blank">大陆公安 从参与迫害到修炼法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/22/n14230977.md#1">【未解之谜】精准预言 易经大师曾仕强泄漏的天机：这些年分很关键</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/17/n14227563.md#1">坚定拒绝淫邪 积阴德得福报的实例</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/23/n14232524.md#1">原创歌曲首发《四?二五赞歌》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/6/n10956298.md#1">文艺复兴时期最伟大的肖像画家之一：小汉斯?霍尔班（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/1/n14216193.md#1">双调?雁儿落（十首）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14235036.md#1">【菁英论坛】翻脸临界点 美国要抽水抓鱼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14235029.md#1">【新闻大破解】布林肯访华白去？美中对抗升级</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14235011.md#1">【新闻五人行】美“定点清除”TikTok党性？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/25/n14234179.md#1">三种高薪副业需求大 有的时薪超200美元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/25/n14233597.md#1">中共仅派上海厅官接布林肯 专家：做给国内看</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/25/n14234192.md#1">对赌失败欠巨款？刘德华官宣开启内地巡演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/25/n14234264.md#1">日本女星井上朋子揭大陆演艺圈潜规则</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/24/n14233325.md#1">香港房市持续低迷 刘嘉玲突然抛售海景豪宅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/24/n14233433.md#1">时隔30年 34岁郝劭文与49岁林志颖惊喜同框</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14234301.md#1">胡歌上街疑为妻买包子 获网友赞“好接地气”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14234623.md#1">如何让兰花重新开花？ 园艺达人教你秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/24/n14233015.md#1">写电子邮件犯这些错误 你就太不专业了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/23/n14232032.md#1">比含糖饮料健康 世界各地9种优格饮报你知</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/10/n14222153.md#1">大豆高蛋白增肌护血管 中医荐2吃法 不胀气富营养</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/12/n14223951.md#1">3种面相易得高血压 按三穴位自然降压</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/6/1/n2138665.md#1">善有善报，拖久了还付利息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346708.md#1">【思想领袖】美国必须在太空领域击败中共</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347510.md#1">【菁英论坛】军中又异动 北京有人夺权</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347469.md#1">【新闻欣视角】A股暴跌背后 股东离场 韭菜接盘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346022.md#1">宁德时代停产 专家：中国锂电业进入淘汰赛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346454.md#1">前政治局常委吴邦国病亡 “五不搞”曾引争议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345971.md#1">韩国海警扣押越界非法捕捞的中国船只</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346417.md#1">《派遣女医X》以电影版落幕 米仓凉子感性落泪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346796.md#1">席琳·迪翁看美式足球赛 被淋泼大桶运动饮料</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346990.md#1">越南餐厅推出“珍珠奶茶牛肉面” 是啥味道？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346769.md#1">秋季宜多吃“白色”食物 按三阴交穴保健</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346351.md#1">想了解空服员吗？ 先看这个工作的优缺点比较</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342967.md#1">案例分析：信仰对健康具深远影响</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/4/27/n14235516.htm">国家重要民俗 北港朝天宫迎妈祖 今明热闹登场</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/19920513/djy/blob/master/gb/24/4/27/n14235516.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/4/27/n14235516.htm">国家重要民俗 北港朝天宫迎妈祖 今明热闹登场</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/4/27/n14235516.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
